--- a/meson.build
+++ b/meson.build
@@ -1,3 +1,3 @@
 project('app', 'cpp')
 libconfig = dependency('libconfig++')
-executable('app', 'main.cpp', dependencies: [libconfig])
+executable('app', ['main.cpp', 'InstallCmd.cpp', 'command.cpp', 'help.cpp', 'RunCmd.cpp'], dependencies: [libconfig], install : true)
