--- a/.app/config
+++ b/.app/config
@@ -14,6 +14,10 @@ dev_depends = ();
 scripts:
 (
     {
+        name = "test";
+        commands = ("echo $prefix")
+    },
+    {
         # Name of the script
         name = "configure";
         # Commands
